--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ sqlalchemy>=2.0.28,<3.0.0
 asyncpg>=0.29.0,<1.0.0
 # 10. alembic : database migration
 alembic>=1.13.1,<2.0.0
+# 11. Jinja2
+Jinja2>=3.1.3,<4.0.0
