--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ asyncpg>=0.29.0,<1.0.0
 alembic>=1.13.1,<2.0.0
 # 11. Jinja2
 Jinja2>=3.1.3,<4.0.0
+# 12. bcrypt
+bcrypt>=4.1.2,<5.0.0
+# 13. python-jose : jwt 
+python-jose>=3.3.0,<4.0.0
