--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,8 @@ services:
       - ./app:/app
       - dev-static-data:/vol/web
     command: >
-      sh -c "alembic revision --autogenerate && \
-             alembic upgrade head && \
-             uvicorn main:app --host 0.0.0.0 --port 8000"
-             
+      sh -c "uvicorn main:app --host 0.0.0.0 --port 8000"
+
     # db를 위한 환경변수 지정
     environment:
       - DB_HOST=db
