도커배포준비

--- a/app/alembic.ini
+++ b/app/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://meoyong:eodyd456@fastapi_miniproject-db-1:5432/mp_test
+sqlalchemy.url = postgresql://meoyong:eodyd456@db:5432/mp_test
 
 
 [post_write_hooks]
