--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=db
 DB_NAME=mp_test
 DB_USER=meoyong
-DB_PASS=password123
+DB_PASS=eodyd456
 SECRET_KEY=dlady@851324697
-ALLOWED_HOSTS=ec2-52-78-65-231.ap-northeast-2.compute.amazonaws.com
+# ALLOWED_HOSTS=ec2-52-78-65-231.ap-northeast-2.compute.amazonaws.com
