--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -6,24 +6,21 @@ services:
     build:
       context: .
       args:
-        - DEV=true
+        - DEV=false
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
       - dev-static-data:/vol/web
     command: >
-      sh -c "alembic revision --autogenerate && \
-             alembic upgrade head && \
-             uvicorn main:app --host 0.0.0.0 --port 8000"
-             
+      sh -c "uvicorn main:app --host 0.0.0.0 --port 8000"
+
     # db를 위한 환경변수 지정
     environment:
-      - DB_HOST=${db}
-      - DB_NAME=mp_test
-      - DB_USER=meoyong
-      - DB_PASS=eodyd456
-      - DEBUG=1
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
     # db라는 컨테이너가 실행되어있어야 이 컨테이너가 실행됨
     depends_on:
       - db
@@ -35,11 +32,15 @@ services:
       - .env
     volumes: 
       - postgres-data:/var/lib/postgresql/data
-  
+    environment:
+      - POSTGRES_NAME=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+
   nginx:
     image: nginx:latest
     ports:
-      - "80:8000"
+      - "80:80"
     volumes: 
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
