--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 events {
-    worker_connection 1024;
+    worker_connections 1024;
 }
 
 http {
@@ -11,7 +11,7 @@ http {
             proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $porxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
